# prompt-injection-detector

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
src/pid/: __init__.py  cli.py  config.py  detector.py  heuristic_detector.py  models.py  pattern_detector.py
tests/: test_detector.py  test_pattern_detector.py  tests_cli.py
